[package]
name = "ag45_tgbot"
version = "0.1.0"
authors = ["Lalalend <acc4anim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
soup = "0.5.1"
regex = "1.5.4"
anyhow = "1.0.40"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros", "time"] }
teloxide = { version = "0.4", features = ["frunk", "macros", "auto-send"] } 